# url-shortener

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py  utils.py
app/routers/: links.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: main.js
tests/: conftest.py  test_links.py
